# pipeline-monitoring-StarWars

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
launch/: aruco.launch  clover.launch  scanner.launch  simulator.launch
resources/aruco_map_txt/: aruco_model.sdf  model.config
resources/aruco_map_txt/materials/scripts/: aruco_materials.material
src/: generate_world.py  pipeline_scanner.py  setup.sh
web/: web.py
web/templates/: index.html
