<?xml version="1.0"?>
<package format="2">
  <name>pipeline_monitoring_starwars</name>
  <version>1.0.0</version>
  <description>
    Система мониторинга нефтепровода
  </description>

  <maintainer email="user@example.com">StarWars Team</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/rootsh4rp365/pipeline-monitoring-StarWars</url>
  <author email="user@example.com">StarWars Team</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf</depend>
  <depend>clover</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

</package>